# cpp-algorithms-visualizer

./: CMakeLists.txt  Makefile  README.md
src/: app.cpp  app.h  binary_tree.cpp  binary_tree.h  linked_list.cpp  linked_list.h  main.cpp  pch.h
src/internal/: logger.cpp  logger.h
src/ui/: dashboard.cpp  dashboard.h  fourier_window.h  linked_list_window.cpp  linked_list_window.h  menu.cpp  menu.h  signal_visualization_window.cpp  signal_visualization_window.h
src/ui/components/: graph.h
